Fix overlapping field on admin inline forms

--- a/core/static/core/css/admin-secondary.css
+++ b/core/static/core/css/admin-secondary.css
@@ -1,3 +1,10 @@
+:root{
+  --primary: var(--link-blue);
+  --default-button-bg: var(--link-blue);
+  --button-bg: var(--mid-blue);
+  --link-fg: var(--primary);
+}
+
 .content{
   background-color: white;
   max-width: 1200px !important;
@@ -127,4 +134,8 @@ td, th {
 
 .submit-row{
   margin: 20px 0 20px !important;
+}
+
+textarea {
+  height: auto !important;
 }
